# ResearchMonitor

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  alembic.ini  pyproject.toml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: fixtures.ts  research-monitor.spec.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
scripts/: generate_skill_contracts.py
skills/research-monitor/: SKILL.md
src/research_monitor/: __init__.py  _version.py  api.py  backup.py  build.py  cli.py  config.py  contracts.py  database.py  graph.py  guided.py  legacy_safety.py  lifecycle.py  locking.py  models.py  mutations.py  preview.py  proposal_utils.py  proposals.py  release_validation.py  schema_validation.py  schemas.py  serializers.py  service.py  skill_installation.py  skill_validation.py  sqlite_backup.py  sqlite_files.py  transport.py  url_safety.py
tests/backend/: conftest.py  test_api.py  test_archived_readiness.py  test_artifact_security.py  test_authentication.py  test_cli.py  test_cli_contract_installer.py  test_cli_entrypoint.py  test_closed_proposal_dedupe.py  test_completion_provenance.py  test_contract_versions.py  test_database_error_handler.py  test_error_contract.py  test_generated_contracts.py  test_graph_proposals.py  test_guided_contract_parity.py  test_guided_skill_forward.py  test_guided_workflows.py  test_hardening.py  test_installed_wheel.py  test_installer_rollback.py  test_installer_upgrade.py  test_legacy_proposal_safety.py  (+29 more)
(+58 files in other folders)
