[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-monitor"
version = "0.1.0"
description = "Local-first research project task monitor"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "sqlalchemy>=2.0,<3",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]

[project.scripts]
research-monitor = "research_monitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.cmdclass]
build_py = "research_monitor.build.BuildPy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
research_monitor = ["static/**/*", "bundled_skill/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
